--- a/css/style_config.css
+++ b/css/style_config.css
@@ -57,13 +57,57 @@ padding: 25px;
 }
 
 .fixarRodape {
+    
     height: 10%;
     bottom: 0;
     position: fixed;
     width: 100%;
-    text-align: center
-   
+    text-align: center;
+    background-color: #69A5DB
 }
+
+/* O modal (inicialmente escondido) */
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* Fundo escurecido */
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* O conteúdo do modal */
+  .modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 50%;
+    text-align: center;
+    position: relative;
+  }
+  
+  /* O botão de fechar */
+  .close {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
 
 
 
